[package]
name = "QuickLook-RS"
version = "0.1.0"
edition = "2024"

[dependencies]
tao = "0.32.8"
tray-icon = "0.20.0"
windows = {version = "0.60.0",features = ["Win32_Foundation","Win32_System_Com","Win32_System_Ole","Win32_UI_Input_KeyboardAndMouse","Win32_UI_WindowsAndMessaging"]}
wry = "0.50.4"
